# PixelCNN-Autoregressive-Image-Generation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  quickstart.py  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: default.yaml
demo/: app.py
notebooks/: pixelcnn_example.ipynb
scripts/: train.py
src/pixelcnn/: __init__.py  data.py  evaluation.py  model.py  sampling.py  training.py
tests/: test_pixelcnn.py
